infra/kafka/k8s/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: farmkart-kafka
  labels:
    app.kubernetes.io/name: kafka-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kafka-ui
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
